<resources>
    <string name="app_name">Midterm Project</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="already_registered_login">Already Registered? Login</string>
    <string name="login">Login</string>
    <string name="not_registered_yet_register_here">Not Signed up Yet? Register Here</string>
    <string name="remember_me">Remember Me</string>
    <string name="log_out">Log out</string>
    <string name="today">Today</string>
    <string name="sample_text">sample text</string>
    <string name="_20">20</string>
    <string name="desc">desc</string>
    <string name="wind">Wind</string>
    <string name="wind_value">Wind value</string>
    <string name="hum_value">Hum value</string>
    <string name="hum">Hum</string>
    <string name="more_details">Weekly Weather</string>
    <string name="back">Back</string>
    <string name="date">Wednesday, January 16</string>
    <string name="temp">temp</string>
    <string name="next_forecasts">Next Forecasts</string>
    <string name="sign_up">Sign Up</string>
    <string name="search_for_city">Search For City</string>
</resources>