<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_background">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="244dp"
        android:src="@drawable/ic_cloud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_cloud_2"
        android:layout_width="288dp"
        android:layout_height="290dp"
        android:layout_marginStart="244dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_cloud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_cloud_3"
        android:layout_width="154dp"
        android:layout_height="98dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="48dp"
        android:src="@drawable/ic_cloud"
        app:layout_constraintEnd_toEndOf="@+id/ic_cloud_2"
        app:layout_constraintTop_toTopOf="@+id/ic_cloud_2" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_cloud_4"
        android:layout_width="128dp"
        android:layout_height="111dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="104dp"
        android:src="@drawable/ic_cloud"
        app:layout_constraintStart_toStartOf="@+id/ic_cloud"
        app:layout_constraintTop_toTopOf="@+id/ic_cloud" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_cloud_5"
        android:layout_width="111dp"
        android:layout_height="80dp"
        android:layout_marginTop="548dp"
        android:layout_marginEnd="76dp"
        android:src="@drawable/ic_cloud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/overpass_m"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="@+id/btn_back" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_rectangle_background"
        android:fontFamily="@font/overpass_b"
        android:hint="@string/email"
        android:paddingStart="20dp"
        android:textColor="@color/ghost_white"
        android:textColorHint="@color/ghost_white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_rectangle_background"
        android:fontFamily="@font/overpass_b"
        android:hint="@string/password"
        android:paddingStart="20dp"
        android:textColor="@color/ghost_white"
        android:textColorHint="@color/ghost_white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_rectangle_background"
        android:fontFamily="@font/overpass_b"
        android:hint="@string/repeat_password"
        android:paddingStart="20dp"
        android:textColor="@color/ghost_white"
        android:textColorHint="@color/ghost_white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="496dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/overpass_b"
        android:text="@string/register"
        android:textColor="@color/ghost_white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_already_registered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/overpass_b"
        android:gravity="center"
        android:text="@string/already_registered_login"
        android:textColor="@color/ghost_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_repeat_password"
        app:layout_constraintVertical_bias="0.952" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btn_already_registered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>