<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_background">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/overpass_m"
        android:text="@string/today"
        android:textColor="@color/ghost_white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_logout"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/overpass_m"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btn_logout"
        app:layout_constraintTop_toTopOf="@+id/btn_logout" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_next_page"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_forward"
        app:layout_constraintStart_toEndOf="@id/tv_weekly_weather"
        app:layout_constraintTop_toTopOf="@+id/tv_weekly_weather"
        tools:layout_editor_absoluteX="166dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_weekly_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="728dp"
        android:fontFamily="@font/overpass_m"
        android:text="@string/more_details"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="300dp"
        android:src="@drawable/ic_cloud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_cloud_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="272dp"
        android:layout_marginTop="664dp"
        android:src="@drawable/ic_cloud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon_primary"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="152dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/info_container"
        android:layout_width="363dp"
        android:layout_height="324dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_rectangle_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_primary" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/overpass_m"
        android:textColor="@color/ghost_white"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="@+id/info_container"
        app:layout_constraintStart_toStartOf="@+id/info_container"
        app:layout_constraintTop_toTopOf="@+id/info_container" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/overpass_m"
        android:textColor="@color/ghost_white"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="@id/info_container"
        app:layout_constraintStart_toStartOf="@id/info_container"
        app:layout_constraintTop_toBottomOf="@id/tv_date" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/overpass_m"
        android:textColor="@color/ghost_white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/info_container"
        app:layout_constraintStart_toStartOf="@id/info_container"
        app:layout_constraintTop_toBottomOf="@id/tv_temp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_drop"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_drop"
        app:layout_constraintStart_toStartOf="@+id/info_container"
        app:layout_constraintTop_toBottomOf="@id/ic_wind" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_hum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/overpass_m"
        android:text="@string/hum"
        android:textColor="@color/ghost_white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/ic_drop"
        app:layout_constraintTop_toTopOf="@id/ic_drop" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/break_line_2"
        android:layout_width="2dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="1dp"
        android:background="@color/ghost_white"
        app:layout_constraintStart_toEndOf="@id/tv_hum"
        app:layout_constraintTop_toTopOf="@id/tv_hum" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_hum_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/overpass_m"
        android:textColor="@color/ghost_white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_wind_value"
        app:layout_constraintTop_toTopOf="@id/ic_drop" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_wind"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_windy"
        app:layout_constraintStart_toStartOf="@+id/info_container"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/overpass_m"
        android:text="@string/wind"
        android:textColor="@color/ghost_white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/ic_wind"
        app:layout_constraintTop_toTopOf="@id/ic_wind" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/break_line"
        android:layout_width="2dp"
        android:layout_height="30dp"
        android:layout_marginTop="1dp"
        android:background="@color/ghost_white"
        app:layout_constraintStart_toStartOf="@+id/break_line_2"
        app:layout_constraintTop_toTopOf="@id/tv_wind" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_wind_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/overpass_m"
        android:textColor="@color/ghost_white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/break_line"
        app:layout_constraintTop_toTopOf="@id/ic_wind" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

</androidx.constraintlayout.widget.ConstraintLayout>